--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_svg: ^0.22.0
   animated_text_kit: ^4.2.1
+  firebase_core: ^2.1.1
+  cloud_firestore: ^4.0.3
 
 dev_dependencies:
   flutter_test:
