--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   firebase_core: ^2.1.1
   cloud_firestore: ^4.0.3
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
